--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -29,14 +29,16 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingVertical="20dp"
-                tools:ignore="NestedWeights">
+                tools:ignore="NestedWeights"
+                android:contentDescription="@string/empty">
             </ImageView>
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingVertical="20dp"
-                app:srcCompat="@drawable/logoorig_trans">
+                app:srcCompat="@drawable/logoorig_trans"
+                android:contentDescription="@string/gamezap_logo">
             </ImageView>
             <LinearLayout
                 android:layout_width="0dp"
@@ -65,7 +67,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.2"
-                android:paddingVertical="5dp">
+                android:paddingVertical="5dp"
+                tools:ignore="NestedWeights">
                 <ImageButton
                     android:id="@+id/gamePage_IMGB_favorite"
                     android:layout_width="0dp"
@@ -76,14 +79,14 @@
                     android:scaleType="fitStart"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/add_fav_star"
-                    tools:ignore="RtlSymmetry" />
+                    tools:ignore="RtlSymmetry"
+                    android:contentDescription="@string/gamePage_TXT_favoriteIcon" />
                 <TextView
                     android:id="@+id/gamePage_TXT_favorite"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="14"
-                    android:layout_marginLeft="5dp"
-                    android:text="Add to Favorite"
+                    android:layout_marginStart="5dp"
                     android:textSize="12sp"
                     android:textColor="@color/white"/>
             </LinearLayout>
@@ -101,7 +104,8 @@
                     android:layout_height="match_parent"
                     android:background="@color/Transparent"
                     android:scaleType="fitXY"
-                    tools:ignore="NestedWeights">
+                    tools:ignore="NestedWeights"
+                    android:contentDescription="@string/gamePage_TXT_gameCover">
                 </ImageView>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -138,7 +142,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="12sp"
-                            android:text="Release Date: "
+                            android:text="@string/gamePage_TXT_releaseDate"
                             android:textColor="@color/yellow"/>
 
                         <TextView
