--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,8 @@
         android:gravity="center"
         android:orientation="vertical"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="8dp">
+        android:paddingVertical="8dp"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -23,7 +24,7 @@
             android:layout_weight="0.3"
             android:paddingVertical="25dp"
             app:srcCompat="@drawable/logoorig_trans"
-            android:contentDescription="TODO">
+            android:contentDescription="@string/gamezap_logo">
 
         </ImageView>
 
@@ -37,21 +38,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/yellow"
-                android:text="Sign In"
+                android:text="@string/login_TXT_signin"
                 android:textSize="30sp"/>
             <TextView
                 android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:text="Hi there is nice to see you again!"
+                android:text="@string/login_TXT_Hey"
                 android:textSize="20sp"/>
             <TextView
                 android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:text="Email"
+                android:text="@string/login_TXT_email"
                 android:textSize="18sp"/>
             <EditText
                 android:layout_marginTop="5dp"
@@ -61,7 +62,7 @@
                 android:textColor="@color/light_gray"
                 android:textSize="18sp"
                 android:autofillHints=""
-                android:hint="expamle@mail.com"
+                android:hint="@string/login_TXT_emailHint"
                 android:inputType="textEmailAddress"
                 tools:ignore="LabelFor" />
             <TextView
@@ -69,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:text="Password"
+                android:text="@string/login_TXT_password"
                 android:textSize="18sp"/>
             <EditText
                 android:layout_marginTop="5dp"
@@ -80,7 +81,7 @@
                 android:textSize="18sp"
                 android:inputType="textPassword"
                 android:ellipsize="start"
-                android:hint="Your Password"
+                android:hint="@string/login_TXT_passwordHint"
                 android:autofillHints=""
                 tools:ignore="LabelFor"/>
 
@@ -98,7 +99,7 @@
                 android:id="@+id/login_BTN_signIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign In"
+                android:text="@string/login_TXT_sign_in"
                 android:textColor="@color/blue_heavy"
                 app:backgroundTint="@color/yellow"
                 android:textSize="20sp"/>
@@ -111,20 +112,16 @@
             android:layout_height="0dp"
             android:layout_weight="0.15"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingHorizontal="5dp">
-            <Button
-                android:id="@+id/login_BTN_forgotPassword"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/login_TXT_forgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/Transparent"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_marginTop="10dp"
-                android:text="Forgot Password?"
-                android:textColor="@color/light_gray"
-                android:shadowColor="@android:color/transparent"
+                android:layout_marginTop="5dp"
+                android:text="@string/login_TXT_newcomer"
+                android:textColor="@color/white"
                 android:layout_marginHorizontal="5dp"
-                android:textSize="12sp" />
+                android:textSize="15sp" />
             <Button
                 android:id="@+id/login_BTN_signUp"
                 android:layout_width="wrap_content"
@@ -132,8 +129,8 @@
                 android:backgroundTint="@color/Transparent"
                 style="?android:attr/borderlessButtonStyle"
                 android:textColor="@color/yellow"
-                android:layout_marginTop="10dp"
-                android:text="Sign Up"
+                android:layout_marginTop="5dp"
+                android:text="@string/login_TXT_sign_up"
                 android:textSize="12sp"
                 tools:ignore="ButtonStyle" />
 
