--- a/app/src/main/res/layout-v26/activity_game_page.xml
+++ b/app/src/main/res/layout-v26/activity_game_page.xml
@@ -36,7 +36,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:paddingVertical="20dp"
+                android:paddingVertical="10dp"
                 app:srcCompat="@drawable/logoorig_trans"
                 android:contentDescription="@string/gamezap_logo">
             </ImageView>
@@ -51,7 +51,7 @@
                     android:id="@+id/gamePage_IMG_profile"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="1.3"
                     app:civ_border_color="@color/yellow"
                     app:civ_border_width="1dp">
                 </de.hdodenhof.circleimageview.CircleImageView>
@@ -61,7 +61,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1.5"
+            android:layout_weight="3"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,21 +97,22 @@
                 android:layout_weight="1.5"
                 android:background="@color/blue_heavy"
                 android:padding="10dp"
-                android:orientation="horizontal">
+                android:gravity="center"
+                android:orientation="vertical">
                 <ImageView
                     android:id="@+id/gamePage_IMG_gameCover"
-                    android:layout_width="150dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="300dp"
+                    android:layout_height="150dp"
                     android:background="@color/Transparent"
                     android:scaleType="fitXY"
                     tools:ignore="NestedWeights"
                     android:contentDescription="@string/gamePage_TXT_gameCover">
                 </ImageView>
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1.5"
-                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="10dp"
+                    android:gravity="left"
                     android:orientation="vertical"
                     tools:ignore="NestedWeights">
                     <TextView
