--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -61,7 +61,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1.5"
+            android:layout_weight="3"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,20 +97,19 @@
                 android:layout_weight="1.5"
                 android:background="@color/blue_heavy"
                 android:padding="10dp"
-                android:orientation="horizontal">
+                android:orientation="vertical">
                 <ImageView
                     android:id="@+id/gamePage_IMG_gameCover"
                     android:layout_width="150dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="90dp"
                     android:background="@color/Transparent"
                     android:scaleType="fitXY"
                     tools:ignore="NestedWeights"
                     android:contentDescription="@string/gamePage_TXT_gameCover">
                 </ImageView>
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1.5"
                     android:paddingHorizontal="10dp"
                     android:orientation="vertical"
                     tools:ignore="NestedWeights">
