--- a/app/src/main/res/layout/list_games.xml
+++ b/app/src/main/res/layout/list_games.xml
@@ -7,6 +7,7 @@
 
     <ImageButton
         android:id="@+id/game_IMG_cover"
+        android:requiresFadingEdge="horizontal|vertical"
         android:layout_width="180dp"
         android:layout_height="103dp"
         android:layout_margin="10dp"
